# ZKCEC

./: CMakeLists.txt  README.md  clause.h  clauseCheck.hpp  clauseRAM.cpp  run_experiment.sh  utils.h
input/: adder_2x2.info  adder_2x2.prf.sorted  adder_2x2.prf.sorted.unfold  mult_4x4.info  mult_4x4.prf.sorted  mult_4x4.prf.sorted.unfold
src/: clause.cpp  clause.h  clauseRAM.h  commons.h  encoder.hpp  main.cpp  polynomial.cpp  polynomial.h  utils.cpp
